added versioning for myget

--- a/NuGets/FluentACS/FluentACS.nuspec
+++ b/NuGets/FluentACS/FluentACS.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>FluentACS</id>
-    <version>1.0.0</version>
+    <version>$version$</version>
     <authors>Jorge Rowies</authors>
     <owners>Jorge Rowies</owners>
     <licenseUrl>https://github.com/jrowies/FluentACS/blob/master/LICENSE</licenseUrl>
